# form_agent

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: generate_samples.py
docs/: architecture.md  langgraph_architecture.md  prompts.md
notebooks/: 01_extraction_exploration.ipynb  02_rag_eval.ipynb
src/form_agent/: __init__.py  agent.py  cli.py  config.py  extraction.py  ingestion.py  llm.py  multi_qa.py  parsing.py  qa.py  store.py  summarize.py  telemetry.py
src/form_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_extraction.py  test_multi_qa.py  test_parsing.py  test_qa.py  test_store.py
ui/: streamlit_app.py
